--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ h1{
 }
 body{
 
-  background-image:  url("https://images.pexels.com/photos/750225/pexels-photo-750225.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1");
+  background-image:  url("img.jpg");
   background-size: cover;
 }
 p{
